<resources>
    <string name="app_name">Flavour Fusion</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="my_food_app">MY_FOOD_APP</string>
    <string name="email_address">Email_Address</string>
    <string name="if_you_have_already_login">If you have already login?</string>
    <string name="The_Kitchen">the_kitchen</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone_No</string>
    <string name="sign_up">Sign_up</string>
    <string name="sign_in">Sign_up</string>
    <string name="Name">Name</string>
    <string name="Email_Address">email</string>
    <string name="Password">pass</string>
    <string name="Phone_No">phone</string>
    <string name="Pass">Password</string>
    <string name="flavour_fusion">Flavour Fusion</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="orders">Orders</string>
    <string name="special_offers">Special_Offers</string>
    <string name="discount">Discount</string>
    <string name="rewards">Rewards</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AboutUs">AboutUs</string>
    <string name="log_out">Log out</string>
    <string name="go_to_starters">GO TO STARTERS</string>
    <string name="go_to_breakfast">GO TO BREAKFAST</string>
    <string name="go_to_lunch">GO TO LUNCH</string>
    <string name="go_to_snack">GO TO SNACK</string>
    <string name="go_to_dinner">GO TO DINNER</string>
    <string name="go_to_dessert">GO TO DESSERT</string>
    <string name="main_content">MAIN CONTENT</string>
    <string name="go_to_snacks">GO TO SNACKS</string>
    <string name="go_to_desserts">GO TO DESSERTS</string>
    <string name="order_now">Order_Now</string>
    <string name="shirt_name">Shirt Name</string>
    <string name="price_0_00">Price: $0.00</string>
    <string name="shirt_description">Shirt Description</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gmail">Email</string>
    <string name="address">Address</string>
    <string name="order">Order</string>
    <string name="aboutus">About_Us</string>
    <string name="about_us_content">About_Us_Content</string>
    <string name="about_us">About Us</string>
    <string name="save">Save\n</string>
    <string name="update">Update</string>
    <string name="enter_your_number">Enter_Your_Number</string>
    <string name="phone_numberr">Phone_Number</string>
    <string name="enter_your_email">Enter_your_Email</string>
    <string name="enter_your_name">Enter_Your_Name</string>
    <string name="edit_profile_picture">Edit_Profile_Picture</string>
    <string name="profile">Profile</string>
</resources>