<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:id="@+id/imageview1"/>

    <!-- Shirt Name -->
    <TextView
        android:id="@+id/itemNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shirt_name"
        android:textSize="18sp" />

    <!-- Shirt Price -->
    <TextView
        android:id="@+id/itemPriceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_0_00"
        android:textSize="14sp" />

    <!-- Shirt Description -->
    <TextView
        android:id="@+id/itemDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/shirt_description"
        android:textSize="14sp" />

    <!-- Full Name -->
    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/full_name"
        android:inputType="text"
        android:minHeight="48dp" />

    <!-- Mobile Number -->
    <EditText
        android:id="@+id/mobileNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:minHeight="48dp" />

    <!-- Email -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/gmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <!-- Address -->
    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:minHeight="48dp" />

    <!-- Order Button -->
    <Button
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/order" />

</LinearLayout>