<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/The_Kitchen"
            android:textSize="33sp"
            android:textColor="@color/purple_500"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:drawableStart="@drawable/baseline_email_24"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:minHeight="50dp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:drawableStart="@drawable/baseline_password_24"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:minHeight="50dp"
            />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/purple_200" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/if_you_have_already_login"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/sign"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:text="@string/sign_up"
            android:textColor="@color/teal_700"
            />





    </LinearLayout>


</RelativeLayout>