<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment"
    android:layout_centerInParent="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="@drawable/circle_background"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/img_9"
            app:civ_border_width="2dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            app:civ_border_color="#FF000000"/>

        <!-- Name -->
        <ImageButton
            android:id="@+id/editProfileImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/edit_profile_picture"
            android:src="@drawable/baseline_add_24"
            android:layout_marginTop="-20dp"
            android:layout_marginStart="25dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:minHeight="40dp"
            android:hint="@string/name"
            android:textSize="16sp"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_your_name"
            android:visibility="gone"
            android:textColorHint="@color/black"
            app:endIconTint="@color/black"
            app:boxStrokeColor="@color/black"
            android:layout_marginTop="10dp"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profilenameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:minHeight="40dp"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_your_email"
            android:visibility="gone"
            android:textColorHint="@color/black"
            app:endIconTint="@color/black"
            app:boxStrokeColor="@color/black"
            android:layout_marginTop="10dp"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileemailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>



        <!-- Phone Number -->
        <TextView
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:minHeight="40dp"
            android:text="@string/phone_numberr"
            android:textSize="16sp" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profile_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_your_number"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_phonenumberET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>



        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/updateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:visibility="gone"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/save"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>



</ScrollView>